end of services

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,4 @@
-<!-- <app-about-us></app-about-us> -->
-<app-home-page></app-home-page>
+<div class="container">
+  <app-services-menu></app-services-menu>
+  <app-footer></app-footer>
+</div>
