--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -2,7 +2,7 @@
   <div class="footer-right-side">
     <div class="taksa-description">
       <div class="taksa-footer-logo">
-        <img src="../../assets/shared/images/taksa-03.svg" alt="taksa-logo" />
+        <img src="assets/shared/images/taksa-03.svg" alt="taksa-logo" />
         <h6>پردازش هوشمند معتمد کسب و کار</h6>
       </div>
       <p>
@@ -91,10 +91,10 @@
     </div>
     <div class="iso">
       <div>
-        <img src="../../assets/shared/images/namad.png" alt="samane namad" />
+        <img src="assets/shared/images/namad.png" alt="samane namad" />
       </div>
       <div>
-        <img src="../../assets/shared/images/neshan-meli.png" alt="" />
+        <img src="assets/shared/images/neshan-meli.png" alt="" />
       </div>
     </div>
   </div>
