--- a/src/app/home-page/home-page.component.html
+++ b/src/app/home-page/home-page.component.html
@@ -4,7 +4,7 @@
       <nav class="navbar">
         <img
           class="taksa-logo"
-          src="../../assets/shared/images/taksa-colored.png"
+          src="assets/shared/images/taksa-colored.png"
           alt="taksa.logo"
         />
         <div class="links">
@@ -27,7 +27,6 @@
       </nav>
       <hr />
     </header>
-    <!-- <div class="img-slider"></div> -->
   </div>
   <div class="articles">
     <h1 class="article-header">ایجاد رایگان صورتحساب</h1>
@@ -41,7 +40,7 @@
           <li>
             <div>
               <img
-                src="../../assets/shared/images/Subtract.svg"
+                src="assets/shared/images/Subtract.svg"
                 alt="Subtract-list-icon"
               />
               <h6>ثبت‌نام در سامانه معتمد مالیاتی تکسا</h6>
@@ -55,7 +54,7 @@
           <li>
             <div>
               <img
-                src="../../assets/shared/images/Subtract.svg"
+                src="assets/shared/images/Subtract.svg"
                 alt="Subtract-list-icon"
               />
               <h6>وارد کردن شناسه یکتا حافظه مالیاتی</h6>
@@ -72,7 +71,7 @@
           <li>
             <div>
               <img
-                src="../../assets/shared/images/Subtract.svg"
+                src="assets/shared/images/Subtract.svg"
                 alt="Subtract-list-icon"
               />
               <h6>انتخاب گزینه “ایجاد صورتحساب”</h6>
@@ -88,19 +87,15 @@
       <div class="sign-up-img">
         <img
           class="invoice-sample1"
-          src="../../assets/shared/images/invoices 01.webp"
+          src="assets/shared/images/invoices 01.webp"
           alt="sample of invoice"
         />
         <img
           class="invoice-sample2"
-          src="../../assets/shared/images/invoice-02.webp"
+          src="assets/shared/images/invoice-02.webp"
           alt="sample of invoice"
         />
-        <img
-          class="connected"
-          src="../../assets/shared/images/Group 33.svg"
-          alt=""
-        />
+        <img class="connected" src="assets/shared/images/Group 33.svg" alt="" />
       </div>
       <span class="shadow">
         <div class="bullets">
@@ -786,6 +781,176 @@
               </defs>
             </svg>
           </div>
+          <div class="taksa-bullets">
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              width="72"
+              height="67"
+              viewBox="0 0 72 67"
+              fill="none"
+            >
+              <g clip-path="url(#clip0_3415_24536)">
+                <path
+                  d="M6.97961 4.49593C6.97961 6.43114 5.42099 7.99577 3.49322 7.99577C1.56546 7.99577 0 6.43114 0 4.49593C0 2.56073 1.55862 0.996094 3.48638 0.996094C5.41415 0.996094 6.97961 2.56073 6.97961 4.49593Z"
+                  fill="#0183CC"
+                />
+                <path
+                  d="M25.1094 7.99577C27.0349 7.99577 28.5958 6.42884 28.5958 4.49593C28.5958 2.56303 27.0349 0.996094 25.1094 0.996094C23.184 0.996094 21.623 2.56303 21.623 4.49593C21.623 6.42884 23.184 7.99577 25.1094 7.99577Z"
+                  fill="#0183CC"
+                />
+                <path
+                  d="M46.7305 7.99577C48.656 7.99577 50.2169 6.42884 50.2169 4.49593C50.2169 2.56303 48.656 0.996094 46.7305 0.996094C44.805 0.996094 43.2441 2.56303 43.2441 4.49593C43.2441 6.42884 44.805 7.99577 46.7305 7.99577Z"
+                  fill="#0183CC"
+                />
+                <path
+                  d="M71.8341 4.49593C71.8341 6.43114 70.2755 7.99577 68.3477 7.99577C66.42 7.99577 64.8613 6.43114 64.8613 4.49593C64.8613 2.56073 66.42 0.996094 68.3477 0.996094C70.2755 0.996094 71.8341 2.56073 71.8341 4.49593Z"
+                  fill="#0183CC"
+                />
+                <path
+                  d="M6.97961 23.9305C6.97961 25.8657 5.42099 27.4303 3.49322 27.4303C1.56546 27.4303 0 25.8657 0 23.9305C0 21.9953 1.55862 20.4307 3.48638 20.4307C5.41415 20.4307 6.97961 21.9953 6.97961 23.9305Z"
+                  fill="#0183CC"
+                />
+                <path
+                  d="M25.1094 27.4303C27.0349 27.4303 28.5958 25.8634 28.5958 23.9305C28.5958 21.9976 27.0349 20.4307 25.1094 20.4307C23.184 20.4307 21.623 21.9976 21.623 23.9305C21.623 25.8634 23.184 27.4303 25.1094 27.4303Z"
+                  fill="#0183CC"
+                />
+                <path
+                  d="M46.7305 27.4303C48.656 27.4303 50.2169 25.8634 50.2169 23.9305C50.2169 21.9976 48.656 20.4307 46.7305 20.4307C44.805 20.4307 43.2441 21.9976 43.2441 23.9305C43.2441 25.8634 44.805 27.4303 46.7305 27.4303Z"
+                  fill="#0183CC"
+                />
+                <path
+                  d="M71.8341 23.9305C71.8341 25.8657 70.2755 27.4303 68.3477 27.4303C66.42 27.4303 64.8613 25.8657 64.8613 23.9305C64.8613 21.9953 66.42 20.4307 68.3477 20.4307C70.2755 20.4307 71.8341 21.9953 71.8341 23.9305Z"
+                  fill="#0183CC"
+                />
+                <path
+                  d="M6.97961 43.3646C6.97961 45.2998 5.42099 46.8644 3.49322 46.8644C1.56546 46.8644 0 45.2998 0 43.3646C0 41.4294 1.55862 39.8647 3.48638 39.8647C5.41415 39.8647 6.97961 41.4294 6.97961 43.3646Z"
+                  fill="#0183CC"
+                />
+                <path
+                  d="M25.1094 46.8644C27.0349 46.8644 28.5958 45.2975 28.5958 43.3646C28.5958 41.4317 27.0349 39.8647 25.1094 39.8647C23.184 39.8647 21.623 41.4317 21.623 43.3646C21.623 45.2975 23.184 46.8644 25.1094 46.8644Z"
+                  fill="#0183CC"
+                />
+                <path
+                  d="M46.7305 46.8644C48.656 46.8644 50.2169 45.2975 50.2169 43.3646C50.2169 41.4317 48.656 39.8647 46.7305 39.8647C44.805 39.8647 43.2441 41.4317 43.2441 43.3646C43.2441 45.2975 44.805 46.8644 46.7305 46.8644Z"
+                  fill="#0183CC"
+                />
+                <path
+                  d="M71.8341 43.3646C71.8341 45.2998 70.2755 46.8644 68.3477 46.8644C66.42 46.8644 64.8613 45.2998 64.8613 43.3646C64.8613 41.4294 66.42 39.8647 68.3477 39.8647C70.2755 39.8647 71.8341 41.4294 71.8341 43.3646Z"
+                  fill="#0183CC"
+                />
+                <path
+                  d="M6.97961 62.7992C6.97961 64.7344 5.42099 66.299 3.49322 66.299C1.56546 66.299 0 64.7275 0 62.7992C0 60.8708 1.55862 59.2993 3.48638 59.2993C5.41415 59.2993 6.97961 60.8639 6.97961 62.7992Z"
+                  fill="#0183CC"
+                />
+                <path
+                  d="M25.1094 66.299C27.0349 66.299 28.5958 64.7321 28.5958 62.7992C28.5958 60.8662 27.0349 59.2993 25.1094 59.2993C23.184 59.2993 21.623 60.8662 21.623 62.7992C21.623 64.7321 23.184 66.299 25.1094 66.299Z"
+                  fill="#0183CC"
+                />
+                <path
+                  d="M46.7305 66.299C48.656 66.299 50.2169 64.7321 50.2169 62.7992C50.2169 60.8662 48.656 59.2993 46.7305 59.2993C44.805 59.2993 43.2441 60.8662 43.2441 62.7992C43.2441 64.7321 44.805 66.299 46.7305 66.299Z"
+                  fill="#0183CC"
+                />
+                <path
+                  d="M71.8341 62.7992C71.8341 64.7344 70.2755 66.299 68.3477 66.299C66.42 66.299 64.8613 64.7344 64.8613 62.7992C64.8613 60.8639 66.42 59.2993 68.3477 59.2993C70.2755 59.2993 71.8341 60.8639 71.8341 62.7992Z"
+                  fill="#0183CC"
+                />
+              </g>
+              <defs>
+                <clipPath id="clip0_3415_24536">
+                  <rect
+                    width="71.8332"
+                    height="65.3029"
+                    fill="white"
+                    transform="translate(0 0.996094)"
+                  />
+                </clipPath>
+              </defs>
+            </svg>
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              width="72"
+              height="67"
+              viewBox="0 0 72 67"
+              fill="none"
+            >
+              <g clip-path="url(#clip0_3415_24536)">
+                <path
+                  d="M6.97961 4.49593C6.97961 6.43114 5.42099 7.99577 3.49322 7.99577C1.56546 7.99577 0 6.43114 0 4.49593C0 2.56073 1.55862 0.996094 3.48638 0.996094C5.41415 0.996094 6.97961 2.56073 6.97961 4.49593Z"
+                  fill="#0183CC"
+                />
+                <path
+                  d="M25.1094 7.99577C27.0349 7.99577 28.5958 6.42884 28.5958 4.49593C28.5958 2.56303 27.0349 0.996094 25.1094 0.996094C23.184 0.996094 21.623 2.56303 21.623 4.49593C21.623 6.42884 23.184 7.99577 25.1094 7.99577Z"
+                  fill="#0183CC"
+                />
+                <path
+                  d="M46.7305 7.99577C48.656 7.99577 50.2169 6.42884 50.2169 4.49593C50.2169 2.56303 48.656 0.996094 46.7305 0.996094C44.805 0.996094 43.2441 2.56303 43.2441 4.49593C43.2441 6.42884 44.805 7.99577 46.7305 7.99577Z"
+                  fill="#0183CC"
+                />
+                <path
+                  d="M71.8341 4.49593C71.8341 6.43114 70.2755 7.99577 68.3477 7.99577C66.42 7.99577 64.8613 6.43114 64.8613 4.49593C64.8613 2.56073 66.42 0.996094 68.3477 0.996094C70.2755 0.996094 71.8341 2.56073 71.8341 4.49593Z"
+                  fill="#0183CC"
+                />
+                <path
+                  d="M6.97961 23.9305C6.97961 25.8657 5.42099 27.4303 3.49322 27.4303C1.56546 27.4303 0 25.8657 0 23.9305C0 21.9953 1.55862 20.4307 3.48638 20.4307C5.41415 20.4307 6.97961 21.9953 6.97961 23.9305Z"
+                  fill="#0183CC"
+                />
+                <path
+                  d="M25.1094 27.4303C27.0349 27.4303 28.5958 25.8634 28.5958 23.9305C28.5958 21.9976 27.0349 20.4307 25.1094 20.4307C23.184 20.4307 21.623 21.9976 21.623 23.9305C21.623 25.8634 23.184 27.4303 25.1094 27.4303Z"
+                  fill="#0183CC"
+                />
+                <path
+                  d="M46.7305 27.4303C48.656 27.4303 50.2169 25.8634 50.2169 23.9305C50.2169 21.9976 48.656 20.4307 46.7305 20.4307C44.805 20.4307 43.2441 21.9976 43.2441 23.9305C43.2441 25.8634 44.805 27.4303 46.7305 27.4303Z"
+                  fill="#0183CC"
+                />
+                <path
+                  d="M71.8341 23.9305C71.8341 25.8657 70.2755 27.4303 68.3477 27.4303C66.42 27.4303 64.8613 25.8657 64.8613 23.9305C64.8613 21.9953 66.42 20.4307 68.3477 20.4307C70.2755 20.4307 71.8341 21.9953 71.8341 23.9305Z"
+                  fill="#0183CC"
+                />
+                <path
+                  d="M6.97961 43.3646C6.97961 45.2998 5.42099 46.8644 3.49322 46.8644C1.56546 46.8644 0 45.2998 0 43.3646C0 41.4294 1.55862 39.8647 3.48638 39.8647C5.41415 39.8647 6.97961 41.4294 6.97961 43.3646Z"
+                  fill="#0183CC"
+                />
+                <path
+                  d="M25.1094 46.8644C27.0349 46.8644 28.5958 45.2975 28.5958 43.3646C28.5958 41.4317 27.0349 39.8647 25.1094 39.8647C23.184 39.8647 21.623 41.4317 21.623 43.3646C21.623 45.2975 23.184 46.8644 25.1094 46.8644Z"
+                  fill="#0183CC"
+                />
+                <path
+                  d="M46.7305 46.8644C48.656 46.8644 50.2169 45.2975 50.2169 43.3646C50.2169 41.4317 48.656 39.8647 46.7305 39.8647C44.805 39.8647 43.2441 41.4317 43.2441 43.3646C43.2441 45.2975 44.805 46.8644 46.7305 46.8644Z"
+                  fill="#0183CC"
+                />
+                <path
+                  d="M71.8341 43.3646C71.8341 45.2998 70.2755 46.8644 68.3477 46.8644C66.42 46.8644 64.8613 45.2998 64.8613 43.3646C64.8613 41.4294 66.42 39.8647 68.3477 39.8647C70.2755 39.8647 71.8341 41.4294 71.8341 43.3646Z"
+                  fill="#0183CC"
+                />
+                <path
+                  d="M6.97961 62.7992C6.97961 64.7344 5.42099 66.299 3.49322 66.299C1.56546 66.299 0 64.7275 0 62.7992C0 60.8708 1.55862 59.2993 3.48638 59.2993C5.41415 59.2993 6.97961 60.8639 6.97961 62.7992Z"
+                  fill="#0183CC"
+                />
+                <path
+                  d="M25.1094 66.299C27.0349 66.299 28.5958 64.7321 28.5958 62.7992C28.5958 60.8662 27.0349 59.2993 25.1094 59.2993C23.184 59.2993 21.623 60.8662 21.623 62.7992C21.623 64.7321 23.184 66.299 25.1094 66.299Z"
+                  fill="#0183CC"
+                />
+                <path
+                  d="M46.7305 66.299C48.656 66.299 50.2169 64.7321 50.2169 62.7992C50.2169 60.8662 48.656 59.2993 46.7305 59.2993C44.805 59.2993 43.2441 60.8662 43.2441 62.7992C43.2441 64.7321 44.805 66.299 46.7305 66.299Z"
+                  fill="#0183CC"
+                />
+                <path
+                  d="M71.8341 62.7992C71.8341 64.7344 70.2755 66.299 68.3477 66.299C66.42 66.299 64.8613 64.7344 64.8613 62.7992C64.8613 60.8639 66.42 59.2993 68.3477 59.2993C70.2755 59.2993 71.8341 60.8639 71.8341 62.7992Z"
+                  fill="#0183CC"
+                />
+              </g>
+              <defs>
+                <clipPath id="clip0_3415_24536">
+                  <rect
+                    width="71.8332"
+                    height="65.3029"
+                    fill="white"
+                    transform="translate(0 0.996094)"
+                  />
+                </clipPath>
+              </defs>
+            </svg>
+          </div>
           <div class="right-side">
             <p>امکان پشتیبانی 24 ساعته</p>
             <p>ارائه خدمات متنوع به اصناف و سازمان‌ها</p>
@@ -923,7 +1088,10 @@
       </div>
       <div class="taksa-target">
         <div class="circle">
-          <img src="../../assets/shared/images/Group 38.png" alt="" />
+          <img
+            src="assets/shared/images/Group-38.png"
+            alt="Group of svg images"
+          />
         </div>
         <span>
           <svg
@@ -955,6 +1123,7 @@
             </defs>
           </svg>
         </span>
+
         <h2 class="taksa-target-title">هدف تکسا</h2>
         <p class="target-article">
           تکسا، با هدف ساده کردن فرآیند صدور و ارسال صورتحساب ها و در راستای
@@ -991,7 +1160,10 @@
           </svg>
         </span>
         <div class="circles">
-          <img src="../../assets/shared/images/Group 28.png" alt="" />
+          <img
+            src="assets/shared/images/Group-28.png"
+            alt="Group of svg images"
+          />
         </div>
       </div>
     </div>
@@ -1020,7 +1192,7 @@
       </div>
       <div class="view-of-steps">
         <img
-          src="../../assets/shared/images/view-step-of-taksa.png"
+          src="assets/shared/images/view-step-of-taksa.png"
           alt="taksa-how-to"
         />
       </div>
@@ -2541,7 +2713,7 @@
         <h2>اخبار سازمان مالیات</h2>
         <div class="news-boxes">
           <div>
-            <img src="../../assets/shared/images/news.webp" alt="news-images" />
+            <img src="assets/shared/images/news.webp" alt="news-images" />
             <div>
               <span>اطلاعیه</span>
               <h3>نسخه جدید سامانه مودیان به روزرسانی شد</h3>
@@ -2569,7 +2741,7 @@
           </div>
 
           <div>
-            <img src="../../assets/shared/images/news.webp" alt="news-images" />
+            <img src="assets/shared/images/news.webp" alt="news-images" />
             <div>
               <span>اخبار </span>
               <h3>نسخه جدید سامانه مودیان به روزرسانی شد</h3>
@@ -2596,7 +2768,7 @@
             </div>
           </div>
           <div>
-            <img src="../../assets/shared/images/news.webp" alt="news-images" />
+            <img src="assets/shared/images/news.webp" alt="news-images" />
             <div>
               <span>اطلاعیه</span>
               <h3>نسخه جدید سامانه مودیان به روزرسانی شد</h3>
@@ -2798,5 +2970,4 @@
       </div>
     </div>
   </div>
-  <app-footer></app-footer>
 </div>
