--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
 <div class="container">
-  <app-services-menu></app-services-menu>
+  <router-outlet></router-outlet>
   <app-footer></app-footer>
 </div>
