--- a/src/app/services/company/company.component.html
+++ b/src/app/services/company/company.component.html
@@ -22,7 +22,12 @@
         <a> پشتیبانی </a>
         <a> درباره ما </a>
       </div>
-      <input class="signin-btn" type="button" value="ورود | ثبت‌نام" />
+      <input
+        class="signin-btn"
+        type="button"
+        value="ورود | ثبت‌نام"
+        (click)="openTSP()"
+      />
     </nav>
     <hr />
   </header>
