--- a/src/app/services/services.component.html
+++ b/src/app/services/services.component.html
@@ -687,7 +687,7 @@
       </ul>
       <hr />
       <h4>اشتراک‌های ماهانه، فصلی و سالانه</h4>
-      <button>اطلاعات بیشتر</button>
+      <button (click)="goToCompany()">اطلاعات بیشتر</button>
     </div>
     <div class="orange-semicircles">
       <svg
