end of image slider

--- a/src/app/home-page/home-page.component.html
+++ b/src/app/home-page/home-page.component.html
@@ -9,8 +9,8 @@
         />
         <div class="links">
           <!-- <a href="#">خانه</a>
-          <a href="#">خدمات</a>
-          <a href="#">تعرفه</a>
+            <a href="#">خدمات</a>
+            <a href="#">تعرفه</a>
           <a href="#">آموزش</a>
           <a href="#">خبرنامه</a>
           <a href="#">پشتیبانی</a>
@@ -32,6 +32,7 @@
       </nav>
       <hr />
     </header>
+    <app-image-slider></app-image-slider>
   </div>
   <div class="articles">
     <h1 class="article-header">ایجاد رایگان صورتحساب</h1>
