--- a/src/app/services/services.component.html
+++ b/src/app/services/services.component.html
@@ -1,4 +1,7 @@
 <div class="container">
+  <div class="image">
+    <app-image-slider></app-image-slider>
+  </div>
   <div class="guilds-approach">
     <h2>راهکار ویژه اصناف</h2>
     <h5>
@@ -305,40 +308,7 @@
         </defs>
       </svg>
     </div>
-    <div class="semi-circles">
-      <svg
-        xmlns="http://www.w3.org/2000/svg"
-        width="99"
-        height="184"
-        viewBox="0 0 99 184"
-        fill="none"
-      >
-        <circle
-          cx="92"
-          cy="92"
-          r="89"
-          stroke="#12B48B"
-          stroke-opacity="0.35"
-          stroke-width="6"
-        />
-        <circle
-          cx="91.9998"
-          cy="92.0017"
-          r="69.031"
-          stroke="#12B48B"
-          stroke-opacity="0.35"
-          stroke-width="6"
-        />
-        <circle
-          cx="91.9995"
-          cy="91.9998"
-          r="49.062"
-          stroke="#12B48B"
-          stroke-opacity="0.35"
-          stroke-width="6"
-        />
-      </svg>
-    </div>
+
     <div class="row-bullets">
       <svg
         xmlns="http://www.w3.org/2000/svg"
@@ -591,6 +561,40 @@
             />
           </clipPath>
         </defs>
+      </svg>
+    </div>
+    <div class="semi-circles">
+      <svg
+        xmlns="http://www.w3.org/2000/svg"
+        width="99"
+        height="184"
+        viewBox="0 0 99 184"
+        fill="none"
+      >
+        <circle
+          cx="92"
+          cy="92"
+          r="89"
+          stroke="#12B48B"
+          stroke-opacity="0.35"
+          stroke-width="6"
+        />
+        <circle
+          cx="91.9998"
+          cy="92.0017"
+          r="69.031"
+          stroke="#12B48B"
+          stroke-opacity="0.35"
+          stroke-width="6"
+        />
+        <circle
+          cx="91.9995"
+          cy="91.9998"
+          r="49.062"
+          stroke="#12B48B"
+          stroke-opacity="0.35"
+          stroke-width="6"
+        />
       </svg>
     </div>
   </div>
