--- a/src/styles.css
+++ b/src/styles.css
@@ -70,3 +70,6 @@ mat-panel-title {
   align-items: center;
   /* width: 100%; */
 }
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
